# macro

./: .gitignore  README.md  field.js  index.html  robots.txt  sitemap.xml  sol-reviews-pr7.diff  style.css
.github/workflows/: contract.yml  deploy-mcp.yml  test-integration.yml  validate-deployment.yml
assets/: make_current_outlooks.py  make_hero.py
audit/ux-2026-07-20/: audit-report.md
connect/: index.html
contact/: index.html
docs/: index.html  model-adapter-checklist.md
docs/feasibility/: boe-compass.md
frb-us/: index.html
integration/: README.md  modal_app.py  pyproject.toml
integration/src/macromod/: __init__.py  cli.py  core.py  mcp_server.py
integration/src/macromod.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
integration/src/policyengine_macro/: __init__.py  adapters.py  assumptions.py  capabilities.py  cli.py  core.py  mcp_server.py  reporting.py
integration/tests/: conftest.py  test_adapter_contract.py  test_capabilities.py  test_contract.py  test_core.py  test_dynamic.py  test_frbus.py  test_mcp_server.py  test_og.py  test_population.py  test_remote_mcp.py  test_reporting.py  test_score_schema.py  test_site_contract.py  test_tool_surface.py  test_wiring.py  tool_surface.py
models/: index.html
obr/: index.html
olg/: index.html
papers/: index.html
papers/boe-svar/: index.html  main.tex  references.bib
papers/boe-svar/figures/: comparison_numbers.json  current_forecast.json  figure_numbers.json  make_comparison.py  make_current_forecast.py  make_figures.py  rolling_evaluation.json
papers/boe-svar/sections/: appendix.tex  comparison.tex  implementation.tex  intro.tex  limitations.tex  literature.tex  model.tex  results.tex  source.tex  validation.tex
papers/frb-us/: index.html  main.tex  references.bib
papers/frb-us/figures/: make_comparison_figures.py  pyfrbus_comparison.csv  results.json  run_experiments.py
papers/frb-us/sections/: appendix.tex  comparison.tex  implementation.tex  intro.tex  limitations.tex  literature.tex  model.tex  results.tex  validation.tex
papers/obr-macro/: index.html  main.tex  references.bib
papers/obr-macro/figures/: current_outlook.csv  experiments_quarterly.csv  experiments_summary.csv  fig_anchored.py  fig_anchored_data.csv  fig_comparison.py  fig_comparison_data.csv  fig_free_running.py  fig_free_running_data.csv  fig_outturn.py  fig_outturn_data.csv  fig_reform.py  fig_reform_data.csv  make_glossary.py  run_experiments.py  style.py
papers/obr-macro/sections/: appendix.tex  calibration.tex  comparison.tex  conclusion.tex  experiments.tex  glossary_table.tex  intro.tex  limitations.tex  literature.tex  method.tex  model.tex  results.tex
papers/psl-og/: index.html  main.tex  references.bib
papers/psl-og/figures/: make_figures.py
papers/psl-og/sections/: appendix.tex  calibration.tex  comparison.tex  conclusion.tex  implementation.tex  intro.tex  limitations.tex  literature.tex  model.tex  taxfunctions.tex
pe/: index.html
reports/: us-hank-open-source.html
svar/: index.html
validation/: index.html
validation/figures/: README.md  chart_data.json  make_charts.py
