[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "policyengine-macro"
version = "0.1.0"
description = "PolicyEngine Macro integration layer: unified CLI and MCP server over the OBR macro emulator and the UK SVAR model"
requires-python = ">=3.10"
dependencies = [
    "click>=8",
    "numpy",
    "pandas",
    "mcp[cli]>=1.0",
    "pydantic>=2",
]

[project.optional-dependencies]
# The two model packages install straight from GitHub (they ship their data
# as package data — no clone needed); policyengine comes from PyPI (heavy:
# full UK+US country models).
models = [
    "obr-macro-model @ git+https://github.com/PolicyEngine/obr-macroeconomic-model",
    "boe_var @ git+https://github.com/PolicyEngine/boe-var-model",
    # [models] pulls the pinned policyengine-uk / policyengine-us country
    # packages that pe.uk / pe.us need at runtime.
    "policyengine[models]>=4,<5",
]

[project.scripts]
pe-macro = "policyengine_macro.cli:main"
# Legacy alias kept for existing docs/users.
macromod = "policyengine_macro.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = ["slow: runs a model estimation/solve (seconds to a minute)"]
