[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "policyengine-macro"
version = "0.1.0"
description = "PolicyEngine Macro integration layer: unified CLI and MCP server over the OBR macro emulator and the UK SVAR model"
requires-python = ">=3.10"
dependencies = [
    "click>=8",
    "numpy",
    "pandas",
    "mcp[cli]>=1.0",
    "pydantic>=2",
]

[project.optional-dependencies]
# OBR and boe_var install from GitHub and ship their runtime data. FRB-US is
# deliberately excluded: its wheel currently omits model.xml and LONGBASE.TXT,
# so a normal dependency install imports but cannot run. See integration/README.
models = [
    "obr-macro-model @ git+https://github.com/PolicyEngine/obr-macroeconomic-model",
    "boe_var @ git+https://github.com/PolicyEngine/boe-var-model",
    # [models] pulls the pinned policyengine-uk / policyengine-us country
    # packages that pe.uk / pe.us need at runtime.
    "policyengine[models]>=4,<5",
    # policyengine's bundled data-release manifest certifies an exact
    # policyengine-us version; anything newer fails certification at import
    # (every pe.* call raises). Keep in sync with the manifest pin.
    "policyengine-us==1.764.6",
]

[project.scripts]
pe-macro = "policyengine_macro.cli:main"
# Legacy alias kept for existing docs/users.
policyengine-macro = "policyengine_macro.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = ["slow: runs a model estimation/solve (seconds to a minute)"]
